--- a/1.html
+++ b/1.html
@@ -1,55 +1,29 @@
 <!doctype html>
 <html>
 <head>
-  <title>이타카로 가는 길-마음챙김명상</title>
+  <title>이타카로 가는 길-낭만 코딩</title>
 <meta charset="utf-8">
 </head>
 <body>
   <h1><a href="0.html">이타카로 가는 길</a></h1>
  <ol>
-  <li><a href="1.html">마음챙김명상</a></li>
-  <li><a href="2.html">묵독과 글쓰기</a></li>
+  <li><a href="1.html">낭만 코딩</a></li>
+  <li><a href="2.html">연재의 테라스 </a></li>
   <li><a href="3.html">선택이론</a></li>
   <li><a href="4.html">비폭력대화</a></li>
   <li><a href="5.html">버츄 프로젝트</a></li>
-  <li><a href="6.html">회복적 신뢰 써클</a></li>
+  <li><a href="6.html">회복적 생활교육</a></li>
   <li><a href="7.html">코딩으로 리드하라</a></li>
- </ol>
-<h1>마음챙김명상</h1>
-<p>새벽 4시에 깨어 명상을 합니다.
-코를 통한 들숨과 날숨, 배의 움직임 그리고 떠다니는 생각들. <br>어떻게 살 것인가.
-무엇을 위해 살 것인가? <br>한 해, 아니 하루를 새로 시작하며 경건하게 물어봅니다.</p>
-<image src="1.jpg" width="150"> <font size="1"> <div>Icons made by <a href="https://www.flaticon.com/authors/ddara" title="dDara">dDara</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div><br></font>
- 무엇이 우리를 평온함과 자애로 이끌어줄까요?<br><br>
- <image src="2.jpg" width="150"> <br> <font size="1"> <div>Icons made by <a href="https://www.flaticon.com/authors/freepik" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div></font><br>
- 진훍탕 속 세상은 위험하니 이불 밖으로 나가지 말아야 할까요?<br><br>
-<image src="3.jpg" width="150"> <br> <font size="1"> <div>Icons made by <a href="https://www.flaticon.com/authors/freepik" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div></font><br>
+</ol>
 
- 자본주의라는 거대한 질서 속에서 춤추는 끝없는 소비 욕망을 바라봅니다.<br><br>
-   <image src="4.jpg" width="150"> <br> <font size="1"> <div>Icons made by <a href="https://www.flaticon.com/authors/kiranshastry" title="Kiranshastry">Kiranshastry</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div></font><br>
-저는 소비와 돈 그리고 노동의 굴레에서 잠시 벗어나 저의 이타카로 항해하고 싶습니다.<br><br>
-<image src="5.jpg" width="150"> <br> <font size="1"><div>Icons made by <a href="https://www.flaticon.com/authors/dmitri13" title="dmitri13">dmitri13</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div></font><br>
-   자유로운 삶을 항해하기 위해 저는 창작자, 개발자, 생산자가 되기로 했습니다.<br><br>
-   <image src="6.jpg" width="150"> <br> <font size="1"><div>Icons made by <a href="https://www.flaticon.com/authors/eucalyp" title="Eucalyp">Eucalyp</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div></font><br>
-   무엇을 생산하느냐구요? 바로 시입니다.<br><br>
-   <image src="7.jpg" width="150"> <br> <font size="1"><div>Icons made by <a href="https://www.flaticon.com/authors/smalllikeart" title="smalllikeart">smalllikeart</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div></font><br>
- '시는 닻'이라며 삶에 무거운 닻을 던졌던 김수영 시인처럼 저도 두렵고 불안한 미지의 바다에 시로 닻을 내리고 싶습니다.<br><br>
-<image src="8.jpg" width="150"> <br> <font size="1"><div>Icons made by <a href="https://www.flaticon.com/authors/dmitri13" title="dmitri13">dmitri13</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div></font><br>
- 새로운 시대, 새로운 언어로 쓰는 시, 바로 코딩으로 말입니다.<br><br>
- <image src="9.jpg" width="150"> <br> <font size="1"><div>Icons made by <a href="https://www.flaticon.com/authors/monkik" title="monkik">monkik</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div></font><br>
- 저는 그동안 글을 쓸 때 익숙했던 한글 프로그램이나 블로그 포스팅에서 벗어나 <br>
-<image src="10.jpg" width="150"> <br> <font size="1"><div>Icons made by <a href="https://www.flaticon.com/authors/freepik" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div></font><br>
- 코딩 기술을 익혀 웹사이트를 만드는 것부터 시작하려고 합니다.<br>
-<image src="11.jpg" width="150"> <br> <font size="1"><div>Icons made by <a href="https://www.flaticon.com/authors/freepik" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div></font><br>
+  <h2>낭만 코딩</h2>
+  <ul>
+    <li><a href="https://www.youtube.com/watch?v=1jjAqHZFqVE&t=14s">인문학, 코딩을 만나다 </a></li>
 
- 한 줄로 정리해 볼까요?<br><br>
- <image src="12.jpg" width="150"> <br> <font size="1"><div>Icons made by <a href="https://www.flaticon.com/authors/freepik" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div></font><br>
- <strong>이타카를 향한 나의 삶을 코딩으로 리드하자.</strong><br><br>
-<image src="13.jpg" width="150"> <br> <font size="1"><div>Icons made by <a href="https://www.flaticon.com/authors/becris" title="Becris">Becris</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div></font><br>
- 이타카를 향한 험난한 길을 저는 매일 아침 마음챙김 명상으로 시작하려고 합니다.<br><br>
- <image src="14.jpg" width="150"> <br> <font size="1"><div>Icons made by <a href="https://www.flaticon.com/authors/freepik" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div></font><br>
-이타카로 가는 길, 그 길에 당신도 함께 하면 좋겠습니다.<br><br>
-<image src="15.jpg" width="150"> <br> <font size="1"><div>Icons made by <a href="https://www.flaticon.com/authors/surang" title="surang">surang</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div></font><br>
+  </ul>
+
+
 </body>
+
 
 ​
