--- a/2.html
+++ b/2.html
@@ -1,20 +1,24 @@
 <!doctype html>
 <html>
 <head>
-  <title>이타카로 가는 길-묵독과 글쓰기</title>
+  <title>이타카로 가는 길-연재의 테라스</title>
 <meta charset="utf-8">
 </head>
 <body>
-  <h1><a href="0.html">연재의 테라스</a></h1>
+  <h1><a href="0.html">이타카로 가는 길</a></h1>
  <ol>
-  <li><a href="1.html">마음챙김명상</a></li>
-  <li><a href="2.html">묵독과 글쓰기</a></li>
+  <li><a href="1.html">낭만 코딩</a></li>
+  <li><a href="2.html">연재의 테라스 </a></li>
   <li><a href="3.html">선택이론</a></li>
   <li><a href="4.html">비폭력대화</a></li>
   <li><a href="5.html">버츄 프로젝트</a></li>
-  <li><a href="6.html">회복적 신뢰 써클</a></li>
-  <li><a href="7.html">코딩으로 리드하라</a></li>
- </ol>
-<h2>묵독과 글쓰기</h2>
+  <li><a href="6.html">회복적 생활교육</a></li>
+  <li><a href="7.html">코딩으로 리드하라</a></li><br>
+</ol>
 
+<h2>연재의 테라스</h2>
+<ul>
+ <li><a href="https://opentutorials.org"> 생활코딩</a> 코딩을 아주 쉽게 가르쳐주는 비영리단체 </li>
+<li><a href="http://hongseongcb.net"> 마을활력소 </a> 생태적 삶을 사는 사람들이 모여사는 홍동마을 지역센터</li>
+</ul>
 </body>
