--- a/3.html
+++ b/3.html
@@ -5,15 +5,20 @@
 <meta charset="utf-8">
 </head>
 <body>
-  <h1><a href="0.html">연재의 테라스</a></h1>
+  <h1><a href="0.html">이타카로 가는 길</a></h1>
  <ol>
-  <li><a href="1.html">마음챙김명상</a></li>
-  <li><a href="2.html">묵독과 글쓰기</a></li>
+  <li><a href="1.html">낭만 코딩</a></li>
+  <li><a href="2.html">연재의 테라스 </a></li>
   <li><a href="3.html">선택이론</a></li>
   <li><a href="4.html">비폭력대화</a></li>
   <li><a href="5.html">버츄 프로젝트</a></li>
-  <li><a href="6.html">회복적 신뢰 써클</a></li>
-  <li><a href="7.html">코딩으로 리드하기</a></li>
- </ol>
+  <li><a href="6.html">회복적 생활교육</a></li>
+  <li><a href="7.html">코딩으로 리드하라</a></li><br>
+</ol>
+
 <h2>선택이론</h2>
+<ul>
+ <li>
+ <a href="http://www.kccrose.com">한국심리상담연구소 </a> 행복의 심리,선택이론을 잘 배울 수 있는 곳 <br>
+ </li>
 </body>
