--- a/4.html
+++ b/4.html
@@ -7,13 +7,18 @@
 <body>
   <h1><a href="0.html">이타카로 가는 길</a></h1>
  <ol>
-  <li><a href="1.html">마음챙김명상</a></li>
-  <li><a href="2.html">묵독과 글쓰기</a></li>
+  <li><a href="1.html">낭만 코딩</a></li>
+  <li><a href="2.html">연재의 테라스 </a></li>
   <li><a href="3.html">선택이론</a></li>
   <li><a href="4.html">비폭력대화</a></li>
   <li><a href="5.html">버츄 프로젝트</a></li>
-  <li><a href="6.html">회복적 신뢰 써클</a></li>
-  <li><a href="7.html">코딩으로 리드하기</a></li>
- </ol>
+  <li><a href="6.html">회복적 생활교육</a></li>
+  <li><a href="7.html">코딩으로 리드하라</a></li><br>
+</ol>
+
 <h2>비폭력대화</h2>
+<ul>
+ <li><a href="http://www.krnvc.org"> 한국NVC센터 </a> 평화로운 관계의 기술인 비폭력대화를 배울 수 있는 곳 <br>
+ </li>
+</ul>
 </body>
