--- a/7.html
+++ b/7.html
@@ -7,15 +7,25 @@
 <body>
   <h1><a href="0.html">이타카로 가는 길</a></h1>
  <ol>
-  <li><a href="1.html">마음챙김명상</a></li>
-  <li><a href="2.html">묵독과 글쓰기</a></li>
+  <li><a href="1.html">낭만 코딩</a></li>
+  <li><a href="2.html">연재의 테라스 </a></li>
   <li><a href="3.html">선택이론</a></li>
   <li><a href="4.html">비폭력대화</a></li>
   <li><a href="5.html">버츄 프로젝트</a></li>
-  <li><a href="6.html">회복적 신뢰 써클</a></li>
-  <li><a href="7.html">코딩으로 리드하라</a></li>
- </ol>
+  <li><a href="6.html">회복적 생활교육</a></li>
+  <li><a href="7.html">코딩으로 리드하라</a></li><br>
+</ol>
+
 <h2>코딩으로 리드하라</h2>
+
+<ul>
+ <li><a href="http://info.cern.ch">원시웹</a> 웹의 메소포타미아</li>
+ <li><a href="https://www.youtube.com/watch?v=pYOEy_mAMpI&list=PLuHgQVnccGMDZP7FJ_ZsUrdCGH68ppvPb&index=16">
+웹의 역사 </a> 쉬운 웹 역사 강의</li>
+ <li><a href="https://github.com"> github </a>무료 웹 호스팅 업체</li>
+</ul>
+
+
 </body>
 
 ​
