--- a/1.html
+++ b/1.html
@@ -17,6 +17,18 @@
 </ol>
 
   <h2>낭만 코딩</h2>
+  <img src="p25.jpg" width="350"><a style="background-color:grey;color:white;text-decoration:none;padding:1px 2px;font-family:-apple-system, BlinkMacSystemFont, &quot;San Francisco&quot;, &quot;Helvetica Neue&quot;, Helvetica, Ubuntu, Roboto, Noto, &quot;Segoe UI&quot;, Arial, sans-serif;font-size:1px;font-weight:bold;line-height:1.2;display:inline-block;border-radius:3px" href="https://unsplash.com/@codestorm?utm_medium=referral&amp;utm_campaign=photographer-credit&amp;utm_content=creditBadge" target="_blank" rel="noopener noreferrer" title="Download free do whatever you want high-resolution photos from Safar Safarov"><span style="display:inline-block;padding:2px 3px"><svg xmlns="http://www.w3.org/2000/svg" style="height:12px;width:auto;position:relative;vertical-align:middle;top:-2px;fill:white" viewBox="0 0 32 32"><title>unsplash-logo</title><path d="M10 9V0h12v9H10zm12 5h10v18H0V14h10v9h12v-9z"></path></svg></span><span style="display:inline-block;padding:2px 3px">Safar Safarov</span></a>
+  <p> 2020년 1월 1일 새해 아침,<br>
+     코딩 공부를 시작했습니다.<br>
+    새로운 언어 html을 공부한지 8일째 되던 날,<br>
+    웹사이트의 구조를 세우고 얼개를 짜서 <br>
+    웹의 바다에 띄워놓았습니다.<br>
+    뿌듯합니다. <br>
+    앙상한 철골 뿐인데도 <br>
+    무엇이 더 있어야 하나 싶게 충분히 만족스럽습니다.<br>
+    그러나 아마도 <br>
+    아름다움에 대한 갈망이 저를 이끌어 줄 것입니다. <br>
+    또 다른 언어에 대한 배움으로. </p>
   <ul>
     <li><a href="https://www.youtube.com/watch?v=1jjAqHZFqVE&t=14s">인문학, 코딩을 만나다 </a></li>
 
