--- a/2.html
+++ b/2.html
@@ -17,6 +17,40 @@
 </ol>
 
 <h2>연재의 테라스</h2>
+<img src="p24.jpg" width="350"><a style="background-color:grey;color:white;text-decoration:none;padding:1px 2px;font-family:-apple-system, BlinkMacSystemFont, &quot;San Francisco&quot;, &quot;Helvetica Neue&quot;, Helvetica, Ubuntu, Roboto, Noto, &quot;Segoe UI&quot;, Arial, sans-serif;font-size:1px;font-weight:bold;line-height:1.2;display:inline-block;border-radius:3px" href="https://unsplash.com/@_entreprenerd?utm_medium=referral&amp;utm_campaign=photographer-credit&amp;utm_content=creditBadge" target="_blank" rel="noopener noreferrer" title="Download free do whatever you want high-resolution photos from Arno Smit"><span style="display:inline-block;padding:2px 3px"><svg xmlns="http://www.w3.org/2000/svg" style="height:12px;width:auto;position:relative;vertical-align:middle;top:-2px;fill:white" viewBox="0 0 32 32"><title>unsplash-logo</title><path d="M10 9V0h12v9H10zm12 5h10v18H0V14h10v9h12v-9z"></path></svg></span><span style="display:inline-block;padding:2px 3px">Arno Smit</span></a>
+<p>옛날에 연재의 테라스라는 <br>
+  예쁜 가게가 있었습니다. <br>
+  제가 거기 주인장이었지요.<br>
+  가르치는 일이 싫어서 <br>
+  도망치듯 벌려놓았던<br>
+  파스타 가게, 연재의 테라스에서<br>
+  저는 꼬박 5년을<br>
+  마치 신화 속 시지프처럼 <br>
+  노동의 굴레에 갇혀있었지요.<br>
+  우연한 사건으로<br>
+  저는 다시 학교로 돌아올 수 있었고<br>
+  지금은 예쁜 아이들을 가르치며 <br>
+  행복한 시간을 보내고 있답니다. </p>
+
+  <p>다시 연재의 테라스를 떠올려봅니다.<br>
+  연재의 테라스가 저에게는 <br>
+  영혼의 휴식처였음을 <br>
+  이제 알겠습니다. <br>
+  만약 연재의 테라스가 없었다면<br>
+  아마도 여전히 저는 <br>
+  가르치는 일이 너무나도 지겹고<br>
+  아이들이 하나도 예쁘지 않았을테죠.</p>
+
+  <p>그리스의 현인들은 나그네들을<br>
+    신의 사랑을 받는 이들이라 여기며<br>
+    환대했다고 하죠. <br>
+   이타카를 찾아 길을 나선 친구들은 <br>
+  휴식이 필요할 때가 있고 <br>
+  그들은 이타카를 원한다는 이유 하나로 <br>
+  환대받아 마땅합니다.<br>
+  이것이 제가 연재의 테라스를 <br>
+ 다시 떠올린 이유입니다. </p>
+
 <ul>
  <li><a href="https://opentutorials.org"> 생활코딩</a> 코딩을 아주 쉽게 가르쳐주는 비영리단체 </li>
 <li><a href="http://hongseongcb.net"> 마을활력소 </a> 생태적 삶을 사는 사람들이 모여사는 홍동마을 지역센터</li>
