--- a/2.html
+++ b/2.html
@@ -33,24 +33,26 @@
   행복한 시간을 보내고 있답니다. </p>
 
   <p>다시 연재의 테라스를 떠올려봅니다.<br>
+  만약 연재의 테라스가 없었다면<br>
+  아마도 저는 <br>
+  가르치는 일이 너무나도 지겹고<br>
+  아이들이 하나도 예쁘지 않았을테죠.<br>
   연재의 테라스가 저에게는 <br>
   영혼의 휴식처였음을 <br>
-  이제 알겠습니다. <br>
-  만약 연재의 테라스가 없었다면<br>
-  아마도 여전히 저는 <br>
-  가르치는 일이 너무나도 지겹고<br>
-  아이들이 하나도 예쁘지 않았을테죠.</p>
+  이제 알겠습니다. </p>
 
-  <p>그리스의 현인들은 나그네들을<br>
+  <p>이타카를 찾아 길을 나선 이들은
+    휴식이 필요할 때가 있고
+    오딧세우스가 그랬던 것처럼
+    환대받아 마땅합니다.
+    그리스의 현인들은 나그네들을<br>
     신의 사랑을 받는 이들이라 여기며<br>
     환대했다고 하죠. <br>
-   이타카를 찾아 길을 나선 친구들은 <br>
-  휴식이 필요할 때가 있고 <br>
-  그들은 이타카를 원한다는 이유 하나로 <br>
-  환대받아 마땅합니다.<br>
-  이것이 제가 연재의 테라스를 <br>
- 다시 떠올린 이유입니다. </p>
+   이것이 제가 저의 첫 웹사이트,
+   이타카로 가는 길을 만들며
+  연재의 테라스를 다시 떠올린 이유입니다. </p>
 
+<h3> 친구네 테라스 </h3>
 <ul>
  <li><a href="https://opentutorials.org"> 생활코딩</a> 코딩을 아주 쉽게 가르쳐주는 비영리단체 </li>
 <li><a href="http://hongseongcb.net"> 마을활력소 </a> 생태적 삶을 사는 사람들이 모여사는 홍동마을 지역센터</li>
