--- a/2.html
+++ b/2.html
@@ -41,15 +41,15 @@
   영혼의 휴식처였음을 <br>
   이제 알겠습니다. </p>
 
-  <p>이타카를 찾아 길을 나선 이들은
-    휴식이 필요할 때가 있고
-    오딧세우스가 그랬던 것처럼
-    환대받아 마땅합니다.
+  <p>이타카를 찾아 길을 나선 이들은<br>
+    휴식이 필요할 때가 있고<br>
+    오딧세우스가 그랬던 것처럼<br>
+    환대받아 마땅합니다.<br>
     그리스의 현인들은 나그네들을<br>
     신의 사랑을 받는 이들이라 여기며<br>
     환대했다고 하죠. <br>
-   이것이 제가 저의 첫 웹사이트,
-   이타카로 가는 길을 만들며
+   이것이 제가 저의 첫 웹사이트,<br>
+   이타카로 가는 길을 만들며<br>
   연재의 테라스를 다시 떠올린 이유입니다. </p>
 
 <h3> 친구네 테라스 </h3>
