--- a/2.html
+++ b/2.html
@@ -49,7 +49,7 @@
     신의 사랑을 받는 이들이라 여기며<br>
     환대했다고 하죠. <br>
    이것이 제가 저의 첫 웹사이트,<br>
-   이타카로 가는 길을 만들며<br>
+   <이타카로 가는 길>을 만들며<br>
   연재의 테라스를 다시 떠올린 이유입니다. </p>
 
 <h3> 친구네 테라스 </h3>
