--- a/0.html
+++ b/0.html
@@ -5,7 +5,7 @@
 <meta charset="utf-8">
 </head>
 <body>
-  <h1><a href="0.html">이타카로 가는 길</a></h1>
+  <h1><a href="01.html">이타카로 가는 길</a></h1>
  <ol>
   <li><a href="1.html">낭만 코딩</a></li>
   <li><a href="2.html">연재의 테라스</a></li>
@@ -19,10 +19,9 @@
 </a>
 <br>
 
-한 사람이 지나가면 발자국이지만<br>
+<p>한 사람이 지나가면 발자국이지만<br>
 여러 명이 지나가면 길이 됩니다.<br>
-이타카로 가는 친구들의 길이 되고 싶습니다.
-
+이타카로 가는 이들의 길이 되고 싶습니다.
 
 
 ​
