--- a/2.html
+++ b/2.html
@@ -41,9 +41,9 @@
   영혼의 휴식처였음을 <br>
   이제 알겠습니다. </p>
 
-  <p>이타카를 찾아 길을 나선 이들은<br>
+  <p><a href="01.html">이타카</a>를 찾아 길을 나선 이들은<br>
     휴식이 필요할 때가 있고<br>
-    오딧세우스가 그랬던 것처럼<br>
+    <a href="https://ko.wikipedia.org/wiki/오디세우스">오딧세우스</a>가 그랬던 것처럼<br>
     환대받아 마땅합니다.<br>
     그리스의 현인들은 나그네들을<br>
     신의 사랑을 받는 이들이라 여기며<br>
