--- a/7.html
+++ b/7.html
@@ -17,15 +17,18 @@
 </ol>
 
 <h2>코딩으로 리드하라</h2>
-
 <ul>
- <li><a href="http://info.cern.ch">원시웹</a> 웹의 메소포타미아</li>
- <li><a href="https://www.youtube.com/watch?v=pYOEy_mAMpI&list=PLuHgQVnccGMDZP7FJ_ZsUrdCGH68ppvPb&index=16">
-웹의 역사 </a> 쉬운 웹 역사 강의</li>
- <li><a href="https://github.com"> github </a>무료 웹 호스팅 업체</li>
+  <li>웹, 역사를 알면 본질이 보인다.</li>
+
+<p>
+ <iframe width="560" height="315" src="https://www.youtube.com/embed/pYOEy_mAMpI" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+</p>기획, 코딩 기술에 앞선다.
+<iframe width="560" height="315" src="https://www.youtube.com/embed/tZooW6PritE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+  <li></li>
+
+
 </ul>
-
-
 </body>
 
 ​
