--- a/1.html
+++ b/1.html
@@ -29,11 +29,13 @@
     그러나 아마도 <br>
     아름다움에 대한 갈망이 저를 이끌어 줄 것입니다. <br>
     또 다른 언어에 대한 배움으로. </p>
-  <p>
-    <li><iframe width="560" height="315" src="https://www.youtube.com/embed/1jjAqHZFqVE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <ul>
+      <li><a href="https://www.youtube.com/watch?v=1jjAqHZFqVE&t=14s">인문학, 코딩을 만나다.</a></li>
+
+<p>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/1jjAqHZFqVE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </p>
-
-
+</ul>
 
 </body>
 
