--- a/7.html
+++ b/7.html
@@ -19,13 +19,13 @@
 <h2>코딩으로 리드하라</h2>
 <ul>
   <li>웹, 역사를 알면 본질이 보인다.</li>
-
 <p>
  <iframe width="560" height="315" src="https://www.youtube.com/embed/pYOEy_mAMpI" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-</p>기획, 코딩 기술에 앞선다.
+</p>
+<li>기획, 코딩 기술에 앞선다.</li>
+<p>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/tZooW6PritE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-
-  <li></li>
+</p>
 
 
 </ul>
