--- a/2.html
+++ b/2.html
@@ -1,60 +1,22 @@
 <!doctype html>
 <html>
 <head>
-  <title>이타카로 가는 길-연재의 테라스</title>
+  <title>이타카로 가는 길-양육의 정석</title>
 <meta charset="utf-8">
 </head>
 <body>
   <h1><a href="0.html">이타카로 가는 길</a></h1>
  <ol>
-  <li><a href="1.html">낭만 코딩</a></li>
-  <li><a href="2.html">연재의 테라스 </a></li>
-  <li><a href="3.html">선택이론</a></li>
-  <li><a href="4.html">비폭력대화</a></li>
-  <li><a href="5.html">버츄 프로젝트</a></li>
-  <li><a href="6.html">회복적 생활교육</a></li>
-  <li><a href="7.html">코딩으로 리드하라</a></li><br>
+   <li><a href="1.html">낭만 코딩</a></li>
+   <li><a href="2.html">양육의 정석 </a></li>
+   <li><a href="3.html">학교 밖 학교</a></li>
 </ol>
 
-<h2>연재의 테라스</h2>
-<img src="p24.jpg" width="350"><a style="background-color:grey;color:white;text-decoration:none;padding:1px 2px;font-family:-apple-system, BlinkMacSystemFont, &quot;San Francisco&quot;, &quot;Helvetica Neue&quot;, Helvetica, Ubuntu, Roboto, Noto, &quot;Segoe UI&quot;, Arial, sans-serif;font-size:1px;font-weight:bold;line-height:1.2;display:inline-block;border-radius:3px" href="https://unsplash.com/@_entreprenerd?utm_medium=referral&amp;utm_campaign=photographer-credit&amp;utm_content=creditBadge" target="_blank" rel="noopener noreferrer" title="Download free do whatever you want high-resolution photos from Arno Smit"><span style="display:inline-block;padding:2px 3px"><svg xmlns="http://www.w3.org/2000/svg" style="height:12px;width:auto;position:relative;vertical-align:middle;top:-2px;fill:white" viewBox="0 0 32 32"><title>unsplash-logo</title><path d="M10 9V0h12v9H10zm12 5h10v18H0V14h10v9h12v-9z"></path></svg></span><span style="display:inline-block;padding:2px 3px">Arno Smit</span></a>
-<p>옛날에 연재의 테라스라는 <br>
-  예쁜 가게가 있었습니다. <br>
-  제가 거기 주인장이었지요.<br>
-  가르치는 일이 싫어서 <br>
-  도망치듯 벌려놓았던<br>
-  파스타 가게, 연재의 테라스에서<br>
-  저는 꼬박 5년을<br>
-  마치 신화 속 시지프처럼 <br>
-  노동의 굴레에 갇혀있었지요.<br>
-  우연한 사건으로<br>
-  저는 다시 학교로 돌아올 수 있었고<br>
-  지금은 예쁜 아이들을 가르치며 <br>
-  행복한 시간을 보내고 있답니다. </p>
-
-  <p>다시 연재의 테라스를 떠올려봅니다.<br>
-  만약 연재의 테라스가 없었다면<br>
-  아마도 저는 <br>
-  가르치는 일이 너무나도 지겹고<br>
-  아이들이 하나도 예쁘지 않았을테죠.<br>
-  연재의 테라스가 저에게는 <br>
-  영혼의 휴식처였음을 <br>
-  이제 알겠습니다. </p>
-
-  <p><a href="01.html">이타카</a>를 찾아 길을 나선 이들은<br>
-    휴식이 필요할 때가 있고<br>
-    <a href="https://ko.wikipedia.org/wiki/오디세우스">오딧세우스</a>가 그랬던 것처럼<br>
-    환대받아 마땅합니다.<br>
-    그리스의 현인들은 나그네들을<br>
-    신의 사랑을 받는 이들이라 여기며<br>
-    환대했다고 하죠. <br>
-   이것이 제가 저의 첫 웹사이트,<br>
-   <strong>이타카로 가는 길</strong>을 만들며<br>
-  연재의 테라스를 다시 떠올린 이유입니다. </p>
-
-<h3> 친구네 테라스 </h3>
+<h2>양육의 정석</h2>
 <ul>
- <li><a href="https://opentutorials.org"> 생활코딩</a> 코딩을 아주 쉽게 가르쳐주는 비영리단체 </li>
-<li><a href="http://hongseongcb.net"> 마을활력소 </a> 생태적 삶을 사는 사람들이 모여사는 홍동마을 지역센터</li>
-</ul>
+  <li><a href="https://www.youtube.com/watch?v=UXRKXE3Tkvw"> OT.</a> 미운 우리 새끼 
+    <p>
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/UXRKXE3Tkvw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></p>
+    </p>
+  </ul>
 </body>
