--- a/0.html
+++ b/0.html
@@ -5,15 +5,11 @@
 <meta charset="utf-8">
 </head>
 <body>
-  <h1><a href="01.html">이타카로 가는 길</a></h1>
+  <h1><a href="01.html">이타카</a>로 가는 길</h1>
  <ol>
   <li><a href="1.html">낭만 코딩</a></li>
-  <li><a href="2.html">연재의 테라스</a></li>
-  <li><a href="3.html">선택이론</a></li>
-  <li><a href="4.html">비폭력대화</a></li>
-  <li><a href="5.html">버츄 프로젝트</a></li>
-  <li><a href="6.html">회복적 생활교육</a></li>
-  <li><a href="7.html">코딩으로 리드하라</a></li><br>
+  <li><a href="2.html">양육의 정석</a></li>
+  <li><a href="3.html">학교 밖 학교</a></li>
 </ol>
 <img src="p23.jpg" width="350"><a style="background-color:grey;color:white;text-decoration:none;padding:1px 2px;font-family:-apple-system, BlinkMacSystemFont, &quot;San Francisco&quot;, &quot;Helvetica Neue&quot;, Helvetica, Ubuntu, Roboto, Noto, &quot;Segoe UI&quot;, Arial, sans-serif;font-size:1px;font-weight:bold;line-height:1.2;display:inline-block;border-radius:3px" href="https://unsplash.com/@haydenwalker?utm_medium=referral&amp;utm_campaign=photographer-credit&amp;utm_content=creditBadge" target="_blank" rel="noopener noreferrer" title="Download free do whatever you want high-resolution photos from Hayden Walker"><span style="display:inline-block;padding:2px 3px"><svg xmlns="http://www.w3.org/2000/svg" style="height:12px;width:auto;position:relative;vertical-align:middle;top:-2px;fill:white" viewBox="0 0 32 32"><title>unsplash-logo</title><path d="M10 9V0h12v9H10zm12 5h10v18H0V14h10v9h12v-9z"></path></svg></span><span style="display:inline-block;padding:2px 3px">Hayden Walker</span>
 </a>
