--- a/1.html
+++ b/1.html
@@ -7,13 +7,9 @@
 <body>
   <h1><a href="0.html">이타카로 가는 길</a></h1>
  <ol>
-  <li><a href="1.html">낭만 코딩</a></li>
-  <li><a href="2.html">연재의 테라스 </a></li>
-  <li><a href="3.html">선택이론</a></li>
-  <li><a href="4.html">비폭력대화</a></li>
-  <li><a href="5.html">버츄 프로젝트</a></li>
-  <li><a href="6.html">회복적 생활교육</a></li>
-  <li><a href="7.html">코딩으로 리드하라</a></li>
+   <li><a href="1.html">낭만 코딩</a></li>
+   <li><a href="2.html">양육의 정석</a></li>
+   <li><a href="3.html">학교 밖 학교</a></li>
 </ol>
 
   <h2>낭만 코딩</h2>
