--- a/3.html
+++ b/3.html
@@ -1,24 +1,29 @@
 <!doctype html>
 <html>
 <head>
-  <title>이타카로 가는 길-선택이론</title>
+  <title>이타카로 가는 길-학교 밖 학교</title>
 <meta charset="utf-8">
 </head>
 <body>
   <h1><a href="0.html">이타카로 가는 길</a></h1>
  <ol>
-  <li><a href="1.html">낭만 코딩</a></li>
-  <li><a href="2.html">연재의 테라스 </a></li>
-  <li><a href="3.html">선택이론</a></li>
-  <li><a href="4.html">비폭력대화</a></li>
-  <li><a href="5.html">버츄 프로젝트</a></li>
-  <li><a href="6.html">회복적 생활교육</a></li>
-  <li><a href="7.html">코딩으로 리드하라</a></li><br>
+   <li><a href="1.html">낭만 코딩</a></li>
+   <li><a href="2.html">양육의 정석</a></li>
+   <li><a href="3.html">학교 밖 학교</a></li>
+
 </ol>
 
-<h2>선택이론</h2>
+<h2>학교 밖 학교</h2>
 <ul>
  <li>
  <a href="http://www.kccrose.com">한국심리상담연구소 </a> 행복의 심리,선택이론을 잘 배울 수 있는 곳 <br>
  </li>
+  <li><a href="https://opentutorials.org"> 생활코딩</a> 코딩을 아주 쉽게 가르쳐주는 비영리단체 </li>
+ <li><a href="http://hongseongcb.net"> 마을활력소 </a> 생태적 삶을 사는 사람들이 모여사는 홍동마을 지역센터</li>
+ <li><a href="http://www.krnvc.org"> 한국NVC센터 </a> 평화로운 관계의 기술인 비폭력대화를 배울 수 있는 곳 <br>
+ </li>
+ <li>
+<a href="http://www.virtues.or.kr">한국버츄프로젝트</a> 긍정 훈육 방법인 미덕의 언어를 잘 배울 수 있는 곳
+</li>
+ </ul>
 </body>
